minor wording update

--- a/content/post/2024-02-11-aggregating-measures-of-uncertainty/index.Rmd
+++ b/content/post/2024-02-11-aggregating-measures-of-uncertainty/index.Rmd
@@ -8,9 +8,7 @@ categories:
 thumbnail: /2024/02/11/aggregating-measures-of-uncertainty/images/joint-distribution.png
 ---
 
-There are many situations where you want to aggregate values, however if those values are on different scales or are related to measures of uncertainty, it's typically more complicated than simply taking a simple mean or sum.
-
-You can't take the aveage of p-values or standard deviations or statistical tests. You also can't take the sum of confidence (or prediction) intervals to get to a confidence interval for the aggregation of the parts. Similar to challenges with aggregating or combining items that are in different scales, you also can't just simply aggregate items that in some way relate to measures of uncertainty.
+There are many situations where you want to aggregate values, however if those values are on different scales or are related to measures of uncertainty, it's typically more complicated than simply taking a simple mean or sum. You can't take the aveage of p-values or standard deviations or statistical tests. You also can't take the sum of confidence (or prediction) intervals to get to an interval for the aggregation of the parts. Similar to challenges with aggregating or combining items that are on different scales, you also can't just simply aggregate items that in some way relate to measures of uncertainty^[Doing so typically results in an over estimation of the level of uncertainty. E.g. summing the bounds of prediction intervals will result in too wide of a band.].
 
 As a practical example, say your firm sells a variety of different products. Each product has a different price and contracts are negotiated on a deal-by-deal basis so the final price has some level of variability that may differ across products. Sales teams are responsible for securing the final price for any sale but each team has a different product mix. You want a measure for evaluating sales teams to identify which are commanding higher or lower prices relative to their peers. Reliably characterizing a team's performance as 'good' or 'bad' requires both an understanding of the value and variability of their specific product mix. You can't evaluate their sales numbers in isolation (e.g. if their product mix is composed of items with high variability in price, what at first glance looks like good or bad performance may have more to do with luck / a greater level of variability in outcomes specific to their products). What you want is to be able to condense all of that information into some measure of how the sales team did based on their particular product mix that takes into account both the expected sales and also the amount of variability in their particular portfolio. 
 
