--- a/content/post/2024-05-08-untangling-nassim-taleb-s-criticism-of-that-headline-grabbing-intermittent-fasting-story/index.Rmd
+++ b/content/post/2024-05-08-untangling-nassim-taleb-s-criticism-of-that-headline-grabbing-intermittent-fasting-story/index.Rmd
@@ -38,13 +38,13 @@ He goes on to make a few criticisms of the study and later states that "small pr
 
 For the remainder of this post I will discuss his complaints regarding sample size in relation to the event rates observed in this study^[Which he suggests is all that is needed to dismiss the results, even if you ignore potential issues in setup: https://x.com/nntaleb/status/1770467069454073997].
 
-There is indeed a need for a larger sample when there is a low event rate (414 participants in the intermittent fasting group is smaller than ideal)[^study-design]. However this sample size is not on its own a justification for throwing-out the small p-value on a post-hoc basis. The p-value represents (taking into account the sample size and the underlying variability / event rate) how likely it is you would get the observed results by random^[p-value of 0.006 suggests these results are unlikely to have occurred by chance alone.]. The need for a large sample size in the case of rare events often has more to do with increasing the power of your study to accommodate for the difficulty of detecting rare events^[related to type 2 errors: ~failure to detect an effect when one truly exists -- a false negative] compared to the problem (that Taleb is alleging) of getting a false positive finding where an effect actually does *not* exist^[Which relates to a type 1 error] ^[The points in this paragraph are also articulated in my [reply](https://x.com/brshallo/status/1772422125069963359) on his thread: ![](images/bry-reply-taleb.png)].
+There is indeed a need for a larger sample when there is a low event rate (414 participants in the intermittent fasting group is smaller than ideal)[^study-design]. However this sample size in this case is not necessarily a justification for throwing-out the small p-value on a post-hoc basis. The p-value represents (taking into account the sample size and the underlying variability / event rate) how likely it is you would get the observed results by random^[p-value of 0.006 suggests these results are unlikely to have occurred by chance alone.]. The need for a large sample size for rare events often has more to do with increasing the power of your study to accommodate for the difficulty of detecting rare events^[related to type 2 errors: ~failure to detect an effect when one truly exists -- a false negative] compared to the problem (that Taleb is alleging) of getting a false positive finding where an effect actually does *not* exist^[Which relates to a type 1 error] ^[The points in this paragraph are also articulated in my [reply](https://x.com/brshallo/status/1772422125069963359) on his thread: ![](images/bry-reply-taleb.png)].
 
 [^study-design]: The concern about sample size often comes up during study design. (Note also that this study is using a database from a national survey, this isn't an experiment or something where they are able to control sample size directly.) If the thing you are measuring is rare, you will need a much larger sample in order to detect it. This increases your "statistical power": the chance you will reject the null hypothesis (i.e. get a small enough p-value) if indeed you should reject it. Given the underlying event rates and an alpha of 0.05 -- a common default -- a sample size of 414 would indeed likely be too small, but for the reason that this wouldn't give you enough statistical power (a common default for statistical power is 0.80 and this sample size, given the other parameters, would put you short of that). (...at most points in this post I write a bit colloquially / loosely so as to avoid using terms like null hypothesis...)
 
 
 
-Still, again excluding other concerns regarding study design, a researcher might question the validity of the p-value of 0.006 based on the fact that multiple tests were done within the study^[and call for a corresponding adjustment of the p-value that takes this into account like a [Bonferroni correction](https://en.wikipedia.org/wiki/Bonferroni_correction), an approach Taleb does mention in *Antifragile*.] or critique the use of frequentist statistics and instead suggest using Bayesian approaches or nonparametric methods^[It's tough to know without actually trying it, my guess is p of 0.006 would have a good chance surviving adjustments in statistical approach though.]. (As a reminder, we're just looking at a poster, the paper is not available, so we don't know the details of the approach the researchers used and whether we would approve of their methods.) However if you've read anything by Taleb you'll know he rejects much of mainstream statistical inference^[Calling himself a "probablist."] and so his critiques tend to be more sweeping than just nitpicking the choice of statistical testing methodology.
+Still, again excluding other concerns regarding study design, a researcher might question the validity of the p-value of 0.006 based on the fact that multiple tests were done within the study^[and call for a corresponding adjustment of the p-value that takes this into account like a [Bonferroni correction](https://en.wikipedia.org/wiki/Bonferroni_correction), an approach Taleb does mention in *Antifragile*.] or critique the use of frequentist statistics and instead suggest using Bayesian approaches or nonparametric methods^[It's tough to know without actually trying it, my guess is p of 0.006 would have a good chance surviving adjustments in statistical approach though.]. (As a reminder, we're just looking at a poster, the paper is not available, so we don't know the details of the approach the researchers used.) However if you've read anything by Taleb you'll know he rejects much of mainstream statistical inference^[Calling himself a "probablist."] and so his critiques tend to be more sweeping than just nitpicking the choice of statistical testing methodology.
 
 ## "sigma change that doubles incidence"
 
@@ -61,7 +61,7 @@ He packs a lot in here[^misunderstand] and after rereading it several times I th
 
 [^subsample-prop]: Taleb focuses a lot (here and in other tweets on this topic) on the relative size of the intermittent fasting group (2% of total study) over the raw number of samples in the group (414 individuals). The study is building a global model across participants and with many variables. Hence, there are circumstances where the relative proportions of different groups *could* theoretically influence the rates of different types of statistical errors (as opposed to just the raw number of samples) and contribute to some instability of estimates (/fragility). However it's at least not obvious what the mechanisms would be for this leading to more false positive results and I don't find the mechanisms he suggests, e.g. regarding misclassification of eating duration group, that compelling... I thought about setting-up a simulation to look at Type 1 error rates of coefficients if you vary the group proportions to get a better look at this and under what conditions this "relative proportion size of each group in relation to total" may actually effect things but didn't get to it... maybe in a future post...
 
-* "(w/uncertainty on classification, from 2d recall)": To be included in the study, surveyed participants had to have two days where they were able to recall their dietary intake, including the timing of meals. The average length of the eating windows in these recalls was used to group participants into "eating duration" groups (of either "<8h," "8<10h," "10<12h," "12-16h," or ">16 h")[^example]. Taleb is suggesting that only requiring 2 recall days (/surveys) to sort people into eating duration groups brings the risk of a high misclassification rate. While this is a fair concern, it's not obvious why some people being put into the wrong "eating duration" group would increase the chance of getting a false positive result in the broader study^[To increase the risk of detecting a false effect there'd generally have to be some kind of association between misclassification and the outcome, which is possible, but is a purely skeptical assertion. There is also the classic p-hacking problem where you just have a bunch of random results and only the "statistically significant" ones get picked-up for publication. This is a problem researchers face. However my interest with this post is in reviewing the explanations Taleb supports his argument with.]. Uncertainty in subgroup classification often adds noise and reduces the power to find a positive result yet in this case Taleb is accusing the study of *falsely* detecting an effect that doesn't actually exist.  
+* "(w/uncertainty on classification, from 2d recall)": To be included in the study, surveyed participants had to have two days where they were able to recall their dietary intake, including the timing of meals. The average length of the eating windows in these recalls was used to group participants into "eating duration" groups (of either "<8h," "8<10h," "10<12h," "12-16h," or ">16 h")[^example]. Taleb is suggesting that only requiring 2 recall days (/surveys) to sort people into eating duration groups brings the risk of a high misclassification rate. While this is a fair concern, it's not obvious why some people being put into the wrong "eating duration" group would increase the chance of getting a false positive result in the broader study^[To increase the risk of detecting a false effect there'd generally have to be some kind of association between misclassification and the outcome, which is possible, but is a purely skeptical assertion. There is also the classic p-hacking problem where you just have a bunch of random results and only the "statistically significant" ones get picked-up for publication. This is a problem researchers face. However my interest with this post is in reviewing the explanations Taleb supports his argument with.]. Uncertainty in subgroup classification often adds noise and reduces the power to find a positive result, yet in this case Taleb is accusing the study of *falsely* detecting an effect that doesn't actually exist.  
 *Screenshot of methods section from poster (that shows approach regarding dietary recall days):*
 
 [^tail-wording]: My guess was that this "tails" terminology is in order to set-up Taleb's ensuing calculations which look at the tails of normal distributions. However this construction feels strained and the approach inappropriate. "Tails" could also just be a linguistic way of emphasizing that 2% is a small proportion of the total data... or leaning into Taleb's tendency to frame things in terms of "tails" (though this framing seems inappropriate here). It could be that I'm not following something.
