--- a/content/post/2024-05-08-untangling-nassim-taleb-s-criticism-of-that-headline-grabbing-intermittent-fasting-story/index.Rmd
+++ b/content/post/2024-05-08-untangling-nassim-taleb-s-criticism-of-that-headline-grabbing-intermittent-fasting-story/index.Rmd
@@ -158,7 +158,7 @@ His approach also somewhat begs the question because what "difference in standar
 
 ## Wrapping-up
 
-I am not trying to defend this study. I can appreciate the instinct to put down a (not even released) paper that has garnered an undue amount of attention and that may go against other results in the field^[I don't know anything about Intermittent Fasting or the relevant research so can't speak to that]. Observational as well as survey-based studies have notorious weaknesses. It's also interesting that the study doesn't find a statistically significant difference in the "all cause mortality" rate for intermittent fasting^[This may have to do with the small sample size of the group and the study being underpowered.]. Furthermore, I don't think raising question marks related to sample size or event rate is a bad thing^[I'm somewhat hesitant to make a purely skeptical "well if you just move some of the observations around" hypothetical but it is indeed the case that if you move maybe somewhere between 7 and 14 of those cardiovascular deaths out of the "Intermittent Fasting" group and into another group you would likely no longer see a statistically significant result. (I don't know exactly how many observations you'd need to move as I don't have access to the model or the underlying data -- that has things like censoring information and the attributes associated with each observation -- which would be needed to do a sensitivity analysis and provide a precise review of how resilient that p value of 0.006 actually is.) While I'm skeptical that the "poor classification into eating duration groups" mechanism Taleb suggests is that likely to add to the risk of Type 1 errors... it is indeed the case that studies of rare events tend to be more sensitive and reminding people of that is often helpful.]. There are plenty of fair reasons to be skeptical^[Matthew Herper's [article](https://www.statnews.com/2024/03/19/intermittent-fasting-study-heart-risk/) and others describe many of the same potential problems in the study as Taleb. However Herper doesn't support his points with inappropriate analytical methods.]. Where I think Taleb goes wrong is that rather than asking questions, or offering areas where he'd like to see further investigation, he rejects the results out-of-hand and then supports his position with what appears to be complicated nonsense[^story].
+I am not trying to defend this study. I can appreciate the instinct to put down a (not even released) paper that has garnered an undue amount of attention and that may go against other results in the field^[I don't know anything about Intermittent Fasting or the relevant research so can't speak to that]. Observational as well as survey-based studies have notorious weaknesses. It's also interesting that the study doesn't find a significant difference in the "all cause mortality" rate for intermittent fasting^[This may have to do with the small sample size of the group and the study being underpowered.]. Furthermore, I don't think raising question marks related to sample size or event rate is a bad thing^[I'm somewhat hesitant to make a purely skeptical "well if you just move some of the observations around" hypothetical but it is indeed the case that if you move maybe somewhere between 7 and 14 of those cardiovascular deaths out of the "Intermittent Fasting" group and into another group you would likely no longer see a statistically significant result. (I don't know exactly how many observations you'd need to move as I don't have access to the model or the underlying data -- that has things like censoring information and the attributes associated with each observation -- which would be needed to do a sensitivity analysis and provide a precise review of how resilient that p value of 0.006 actually is.) While I'm skeptical that the "poor classification into eating duration groups" mechanism Taleb suggests is that likely to add to the risk of Type 1 errors... it is indeed the case that studies of rare events tend to be more sensitive and reminding people of that is often helpful.]. There are plenty of fair reasons to be skeptical^[Matthew Herper's [article](https://www.statnews.com/2024/03/19/intermittent-fasting-study-heart-risk/) and others describe many of the same potential problems in the study as Taleb. However Herper doesn't support his points with inappropriate analytical methods.]. Where I think Taleb goes wrong is that rather than asking questions, or offering areas where he'd like to see further investigation, he rejects the results out-of-hand and then supports his position with what appears to be complicated nonsense[^story].
 
 [^story]: Taleb has a story in *Antifragile* where he derides his business school professors by saying how he would essentially trick them into giving him better grades by adding a bunch of obfuscative pseudo-analytical jargon. I couldn't shake the thought that maybe there is a little bit of that here. However, giving him the benefit of the doubt, I think it's more likely that Taleb, being a prolific and highly opinionated poster, just didn't think things through that much on this one. I also may be being a bit too harsh in this post... then another part of me wonders if I'm missing something and his "difference in sigmas that doubles incidence" methodology does actually support his point in some meaningful way that I don't see.
 
