--- a/content/post/2024-05-08-untangling-nassim-taleb-s-criticism-of-that-headline-grabbing-intermittent-fasting-story/index.Rmd
+++ b/content/post/2024-05-08-untangling-nassim-taleb-s-criticism-of-that-headline-grabbing-intermittent-fasting-story/index.Rmd
@@ -78,7 +78,7 @@ He packs a lot in here[^misunderstand] and after rereading it several times I th
 
   ![](images/model-controls.png)
 
-  That there are so many variables being controlled for could further reduce the power of the study which might actually make it more surprising to see a statistically significant result unless there is a strong underlying effect. Also, if there is multicolinearity between the variables (which he alludes to), this would tend to inflate the standard errors and cause instability in your parameter estimates. This can lead to weird effects, one common byproduct though is also a reduction in the ability to reach statistically significant results. However, as I mentioned previously, the effects of confounding can get complicated so I don't want to focus too much on this as my interest is primarily in the calculations Taleb uses to support his skeptical stance concerning event rates. 
+  That there are so many variables being controlled for could further reduce the power of the study which might actually make it more surprising to see a statistically significant result unless there is a strong underlying effect. Also, if there is multicolinearity between the variables (which he alludes to), this would tend to inflate the standard errors and cause instability in your parameter estimates. This can lead to weird effects, one common byproduct though is also a reduction in the ability to reach statistically significant results. However, as I mentioned previously, the effects of confounding^[[statnews](https://www.statnews.com/2024/03/19/intermittent-fasting-study-heart-risk/) article that suggests some ideas for how unmeasured confounding variables might associate with cardiovascular mortality.] can get complicated so I don't want to focus too much on this as my interest is primarily in the calculations Taleb uses to support his skeptical stance concerning event rates. 
 
 * "Of these, only 31 had an event .0015 vs .0008!": 0.0015 comes from $\frac{31}{20,078}$ i.e. out of the ~20,000 people surveyed, ~0.15% of those individuals were intermittent fasting and also died of cardiovascular failure. The 0.0008 is where things get confusing, it comes from $\frac{\frac{31}{1.91}}{20,078}$
 . I interpret this as essentially saying that if you took the intermittent fasting group's subsample size and applied the reference level's lower hazard rate ($\frac{31}{1.91}$) you would only have expected to get ~16 deaths, those 16 expected deaths then would only have represented ~0.08% of total data in the study ($\frac{16}{20,078}$). Restating this: if it's *actually* the case that the intermittent fasting group *doesn't* have a higher mortality rate, then you would have expected 16 deaths in that subsample which would represent ~0.08% of total data in the study^[Speaking loosely, this part comes off as having an almost false resemblance to what a p-value gets at, which is sort of: "how unlikely is it that you would have seen 31 deaths when you would have expected to see just 16 based on the reference level and underlying data/attributes."]. 
