changes in wording, mostly in appendix

--- a/content/post/2024-08-27-how-you-should-keep-score-in-pickup-basketball/index.Rmd
+++ b/content/post/2024-08-27-how-you-should-keep-score-in-pickup-basketball/index.Rmd
@@ -179,7 +179,7 @@ table
 
 ## Taking action
 
-You might think that the expected values of different shots would naturally balance out. For example, if you're playing by 1s and 2s with alternating possession (where deep shots are more valuable) players could defend long range shots more aggressively which would lead to the shooting percentage on those shots dropping relative to interior shots. In practice though, this modification does not happen as much as would be expected by fully rational players^[Also some adjustments may be difficult to make regardless of intention.]. Instead, many people anchor their play style to whatever brand of basketball they are accustomed and do not fully adjust to the scoring and possession system in place. Given these tendencies, *what should you do?*
+You might think that the expected values of different shots would naturally balance out. For example, if you're playing by 1s and 2s with alternating possession (where deep shots are more valuable) players could defend long range shots more aggressively which would lead to the shooting percentage on those shots dropping relative to interior shots. In practice though, this realignment does not happen as much as would be expected by fully rational players^[Also some adjustments may be difficult to make regardless of intention.]. Instead, many people anchor their play style to whatever brand of basketball they are accustomed and do not fully adjust to the scoring and possession system in place. Given these tendencies, *what should you do?*
 
 1. Advocate for a balanced scoring system^[Being the ethical and upstanding individual you are, you should advocate for the most balanced system available. A more cynical person might say that you should try and skew the scoring system to whichever gives your team the greatest advantage... however I think it's more fun to just try and keep things balanced.]
 
@@ -187,7 +187,7 @@ This means if you're playing full court (with alternating possessions after scor
 
 2. Arbitrage
 
-In many cases you will not be able to influence the scoring system. Other players not fully adapting to unbalanced values of shots is an opportunity. If the system advantages long range scoring, get your best shooter as many decent looks as possible and push your team to play strong exterior defense[^well-balanced-games].
+In many cases you will not be able to influence the scoring system. Other players not fully adapting to unbalanced values of shots is an opportunity. If the system advantages long range scoring, get your best shooter as many decent looks as possible and push your team to play tough exterior defense[^well-balanced-games].
 
 [^well-balanced-games]: Even under reasonably balanced rules you can still find opportunities where people don't play in-line with expected value. One example, is in 1s and 2s make-it-take-it some players will be overly concerned about long range shots (and under appreciate the value of retaining possession) and defend in a way that opens themselves up to drives and high percentage interior shots. This is particularly the case if playing with less than 10 players (e.g. 3 vs 3 or 4 vs 4) where interior play is already more open and the shooting percentage on interior shots likely goes up by more than it does for long range shots.
 
@@ -306,11 +306,11 @@ Sometimes it's better to just play by all 1s.
 
 ### But you don't play pickup basketball to infinity
 
-The solutions in [What if you're playing make-it-take-it?] are with infinite series but in pickup basketball you typically play to some fixed value (e.g. 7, 11, 15, 16, 21, 25). Evaluating [Finite geometric series] would allow you to condition your expected value calculations on how many points (or actually scoring possessions) remain. However, the values for the finite geometric series would only substantively differ from our infinite series calculations as you get near to the end of the game. By this point you'd be better thinking in terms of event outcomes rather than expected points. Event outcomes are a problem of probability rather than expected value and require a different type of analysis. In the future I may do a "Simulating pickup basketball outcomes" post^[E.g. 1s and 2s make-it-take to 11, you're down 9 - 7 with the ball... what are your chances of winning if you...]. However for my purposes in this post (identifying the rules that promote the most balanced games), infinite series work fine as an approximation for expected points. The calculations are also easy to describe as each statement of value does not need to be predicated on how many points remain in the game. From the [Summary] section on I stop saying "approximate expected points" and just say^[This allows me to put both "alternating" and "make-it-take-it" calculations on the same figures without having to clarify that the former is expected points and the latter approximate expected points.] "expected points."
+The solutions in [What if you're playing make-it-take-it?] are with infinite series but in pickup basketball you typically play to some fixed value (e.g. 7, 11, 15, 16, 21, 25). Evaluating [Finite geometric series] would allow you to condition your expected value calculations on how many points (or actually scoring possessions) remain. However, the values for the finite geometric series would only substantively differ from our infinite series calculations as you get near to the end of the game. By this point you'd be better thinking in terms of event outcomes rather than expected points. After all you don't really care about expected points but chance of winning^[The expected points calculations for finite geometric series get weird near the end of the game because you can't score more points after the game ends... but this doesn't matter, you just care about getting to the end of the game.]. Event outcomes are a problem of probability rather than expected value and require a different type of analysis. In the future I may do a "Simulating pickup basketball outcomes" post^[E.g. 1s and 2s make-it-take to 11, you're down 9 - 7 with the ball... what are your chances of winning if you...]. However for my purposes in this post (identifying the rules that promote the most balanced games), infinite series work fine as an approximation for expected points. The calculations are also easy to describe as each statement of value does not need to be predicated on how many points remain in the game. From the [Summary] section on I stop saying "approximate expected points" and just say^[This allows me to put both "alternating" and "make-it-take-it" calculations on the same figures without having to clarify that the former is expected points and the latter approximate expected points.] "expected points."
 
 ### Finite geometric series
 
-*...much of this section has limited relevance and was written while initially thinking about the problem in the wrong way...*
+*Much of this section has limited relevance. I left it in mostly just as a check showing that the finite geometric series converge pretty quickly so that as long as you're a few scores away from the end of the game, the infinite geometric series calculations that I use in the body of the post should work fine as a proxy for evaluating relative imbalances in expected values when playing make-it-take-it.*
 
 Calculating the finite geometric series allows us to consider how many points (/scoring rounds) are left in the game. Equation for calculating the value of a finite geometric series:
 
@@ -320,7 +320,7 @@ $$
 
 In our case, *n* is the number of remaining scoring possessions. However the number of remaining scoring possessions will depend on whether you're shooting interior or long-range shots. Long range shots are worth more points so there would be fewer scoring possessions until the end of the game. For example, if you're playing by 1s and 2s there will be ~half as many scoring possessions remaining if you're sinking long-range compared to interior shots. Taking this into account, let's look at the expected value of each shot (still using our 45% and 30% shooting percentages).
 
-The usefulness of looking at these charts is limited for the reasons described in [But you don't play pickup basketball to infinity] (namely that you should think in terms of event outcomes, particularly near the end of the game). I've also included some point values in the charts that are nonsensical for their scoring system. The purpose of the charts are mainly just to show the pretty quick rate at which the expected values converge -- suggesting that, for most of the game, infinite series are a decent metric to use when considering relative expected value by shot selection if playing make-it-take-it. 
+The usefulness of looking at these charts is limited for the reasons described in [But you don't play pickup basketball to infinity] (namely that you should think in terms of event outcomes, particularly near the end of the game). I've also included some point values in the charts that are nonsensical for their scoring system. The purpose of the charts are mainly just to show the pretty quick rate at which the expected values converge -- suggesting that, for most of the game, infinite series are a decent proxy to use when considering relative expected value by shot selection if playing make-it-take-it. 
 
 ```{r}
 library(dplyr)
